# Medical-QA-Chatbot

./: README.md  cred.env  evaluation.ipynb  inference-final.ipynb  lora-tune-v9.sh  medical_qa_t5base+lora+rag_sample_evaluated.csv  medical_qa_t5base+lora_sample_evaluated.csv  medical_qa_t5base+rag_sample_evaluated.csv  medical_qa_t5base_sample_evaluated.csv  preprocessing.ipynb  pyproject.toml  requirements.txt  train.py
