[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "hf-xet>=1.2.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "rouge-score>=0.1.2",
    "transformers[torch]>=4.57.1",
    "torch==2.9.0+cu130",
    "torchvision==0.24.0+cu130",
    "jupyter-nbconvert",
]
